--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "chatit",
   "version": "0.1.0",
   "private": true,
-
-  "engines": {"npm":"6.14.4",
-               "node": "10.19.0"},
-
+  "engines": {
+    "npm": "6.14.4",
+    "node": "10.19.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
